// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteModalOptions function has the correct body text 1`] = `
<React.Fragment>
  <div>
    You are about to permanently delete all the information within this 
    APD
    . This action cannot be undone.
  </div>
  <br />
  <div>
    Do you want to delete this APD?
  </div>
</React.Fragment>
`;

exports[`DeleteModalOptions function has the correct body text 2`] = `
<React.Fragment>
  <div>
    Deleting this activity will remove all related information entered to this point. This action cannot be undone.
  </div>
  <br />
  <div>
    Do you want to delete this activity?
  </div>
</React.Fragment>
`;

exports[`DeleteModalOptions function has the correct body text 3`] = `
<div>
  Are you sure you want to delete this contractor resource and all their related information? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function has the correct body text 4`] = `
<div>
  Are you sure you want to delete this milestone and all related information? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function has the correct body text 5`] = `
<div>
  Are you sure you want to delete this key person and all their related information? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function has the correct body text 6`] = `
<div>
  Are you sure you want to delete this other state expense and all related information? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function has the correct body text 7`] = `
<div>
  Are you sure you want to delete this outcome and the corresponding metric(s)? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function has the correct body text 8`] = `
<React.Fragment>
  <div>
    Unchecking this Federal Fiscal Year (FFY) will permanently delete any FFY specific data in the current APD. This action cannot be undone.
  </div>
  <br />
  <div>
    Are you sure you want to delete this FFY?
  </div>
</React.Fragment>
`;

exports[`DeleteModalOptions function has the correct body text 9`] = `
<div>
  Are you sure you want to delete this metric? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function has the correct body text 10`] = `
<div>
  Are you sure you want to delete this state staff expense and related state staff expense information? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function has the correct body text 11`] = `
<div>
  PLACEHOLDER TEXT FOR FUNDING SOURCE
</div>
`;

exports[`DeleteModalOptions function returns consistent values 1`] = `
Object {
  "body": [Function],
  "buttonText": "Delete APD",
}
`;

exports[`DeleteModalOptions function returns consistent values 2`] = `
<React.Fragment>
  <div>
    You are about to permanently delete all the information within this 
    APD
    . This action cannot be undone.
  </div>
  <br />
  <div>
    Do you want to delete this APD?
  </div>
</React.Fragment>
`;

exports[`DeleteModalOptions function returns consistent values 3`] = `
Object {
  "body": [Function],
  "buttonText": "Delete Activity",
}
`;

exports[`DeleteModalOptions function returns consistent values 4`] = `
<React.Fragment>
  <div>
    Deleting this activity will remove all related information entered to this point. This action cannot be undone.
  </div>
  <br />
  <div>
    Do you want to delete this activity?
  </div>
</React.Fragment>
`;

exports[`DeleteModalOptions function returns consistent values 5`] = `
Object {
  "body": [Function],
}
`;

exports[`DeleteModalOptions function returns consistent values 6`] = `
<div>
  Are you sure you want to delete this contractor resource and all their related information? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function returns consistent values 7`] = `
Object {
  "body": [Function],
}
`;

exports[`DeleteModalOptions function returns consistent values 8`] = `
<div>
  Are you sure you want to delete this milestone and all related information? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function returns consistent values 9`] = `
Object {
  "body": [Function],
}
`;

exports[`DeleteModalOptions function returns consistent values 10`] = `
<div>
  Are you sure you want to delete this key person and all their related information? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function returns consistent values 11`] = `
Object {
  "body": [Function],
}
`;

exports[`DeleteModalOptions function returns consistent values 12`] = `
<div>
  Are you sure you want to delete this other state expense and all related information? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function returns consistent values 13`] = `
Object {
  "body": [Function],
}
`;

exports[`DeleteModalOptions function returns consistent values 14`] = `
<div>
  Are you sure you want to delete this outcome and the corresponding metric(s)? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function returns consistent values 15`] = `
Object {
  "body": [Function],
  "buttonText": "Delete FFY",
}
`;

exports[`DeleteModalOptions function returns consistent values 16`] = `
<React.Fragment>
  <div>
    Unchecking this Federal Fiscal Year (FFY) will permanently delete any FFY specific data in the current APD. This action cannot be undone.
  </div>
  <br />
  <div>
    Are you sure you want to delete this FFY?
  </div>
</React.Fragment>
`;

exports[`DeleteModalOptions function returns consistent values 17`] = `
Object {
  "body": [Function],
}
`;

exports[`DeleteModalOptions function returns consistent values 18`] = `
<div>
  Are you sure you want to delete this metric? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function returns consistent values 19`] = `
Object {
  "body": [Function],
}
`;

exports[`DeleteModalOptions function returns consistent values 20`] = `
<div>
  Are you sure you want to delete this state staff expense and related state staff expense information? This action cannot be undone.
</div>
`;

exports[`DeleteModalOptions function returns consistent values 21`] = `
Object {
  "body": [Function],
}
`;

exports[`DeleteModalOptions function returns consistent values 22`] = `
<div>
  PLACEHOLDER TEXT FOR FUNDING SOURCE
</div>
`;
